welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: not found: value navance
	else {navance()
              ^Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
	      recule();
                    ^Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
	                 recule(); recule();
                                         ^Program:21: error: type mismatch;
 found   : Unit
 required: Boolean
	                  recule(); recule(); recule();
                                                    ^Program:26: error: type mismatch;
 found   : Unit
 required: Boolean
	                        recule(); recule(); recule(); recule();
                                                                    ^Program:31: error: type mismatch;
 found   : Unit
 required: Boolean
	                             recule(); recule(); recule(); recule(); recule();
                                                                                   ^Program:37: error: type mismatch;
 found   : Unit
 required: Boolean
	                                  } else   recule(); recule(); recule(); recule(); recule(); recule();
                                                                                                           ^